--- a/base_maps.Rmd
+++ b/base_maps.Rmd
@@ -3,3 +3,4 @@ title: "Criação de mapas para o Conceição"
 output: html_notebook
 ---
 
+Baixando os pacotes necessários e os carregando para o projeto
